--- a/src/pages/app/aplicacion.css
+++ b/src/pages/app/aplicacion.css
@@ -1,11 +1,11 @@
 .container-app{
     background-color: rgb(181, 218, 237);
-    width: 100%;
     display: flex;
     flex-direction: row;
     padding: 40px;
     align-items: center;
     justify-content: center;
+    padding-top: 100px;
     
 }
 .app{
