--- a/src/pages/precios/precios.css
+++ b/src/pages/precios/precios.css
@@ -1,11 +1,12 @@
+
+
 .container_precios{
-    width: 100%;
     background-color: rgba(232, 125, 145, 0.59);
-    padding: 60px 0 60px 80px;
+    padding: 100px 0 60px 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    text-align: justify;
 }
 
