--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,78 +1,172 @@
-Button{
+.MuiButtonBase-root {
     font-family: 'Gabarito', sans-serif;
 }
 
-.MuiTextField-root{
-    background-color: rgba(255, 250, 240, 0.381);
-    border-radius: 10px;
-    border-color: none;
-}
-
-
-.container_footer{
+.container_footer {
     background-color: #E87D91;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
     height: auto;
-    padding: 20px 0;
+    padding: 20px 80px 20px 100px;
 }
 
-.titulo{
+
+.titulo {
     font-family: 'Gabarito', sans-serif;
     font-size: 3rem;
 }
 
-.titulo-2{
+.titulo-2 {
     font-family: 'Gabarito', sans-serif;
     font-size: 2rem;
     margin: 0;
     align-self: center;
 }
 
-.subtitulo{
+.subtitulo {
     font-family: 'Gabarito', sans-serif;
     font-size: 1.5rem;
     margin: 0;
 }
-.img-footer{
+
+.img-footer {
     width: 350px;
     align-self: center;
 }
 
-.redes{
+.redes {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.botones_redes{
+.botones_redes {
     display: flex;
     gap: 20px;
 }
 
-.container-form{
+.container-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0%;
 }
 
-.form{
+.form {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.diseñado{
+.diseñado {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 20px;
 }
 
-.firma{
+.firma {
     width: 80px;
+}
+
+@media screen and (max-width: 768px) {
+
+    .container_footer {
+        display: grid;
+        grid-template-columns: 200px 346px;
+        grid-template-rows: 20px;
+        text-align: start;
+        justify-items: center;
+        justify-content: space-around;
+        align-items: start;
+        padding: 20px 20px 20px 90px;
+
+    }
+
+    .contenedor_imagen {
+        grid-column: 0;
+        grid-row: 1;
+        margin: 0;
+        padding: 20px;
+    }
+
+    .redes_sociales {
+        margin: 0;
+        padding-Top: 120px;
+        text-align: center;
+    }
+
+
+    .img-footer {
+        width: 100%;
+        max-width: 150px;
+    }
+
+
+    .titulo {
+        padding: 0;
+        font-size: 2rem;
+    }
+
+    .botones_redes {
+        gap: 5px;
+    }
+
+    .container-form {
+        width: 100%;
+        grid-row: -2;
+        padding-top: 20px;
+
+    }
+
+    .subtitulo {
+        font-size: 1rem;
+    }
+
+    .firma {
+        width: 50px;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .container_footer {
+        display: grid;
+        grid-template-columns: 200px 346px;
+        grid-template-rows: 20px;
+        text-align: start;
+        justify-items: center;
+        justify-content: space-around;
+        align-items: start;
+        padding: 20px 20px 20px 90px;
+
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .container_footer {
+        display: grid;
+        grid-template-columns: 1fr;
+        text-align: start;
+        justify-items: center;
+        justify-content: space-around;
+        align-items: center;
+        padding: 20px 0 0 55px;
+    }
+
+    .container-form {
+        grid-row: 2;
+        padding: 0%;
+    }
+
+    .contenedor_imagen{
+        grid-row: 3;
+    }
+
+    .redes_sociales{
+        grid-row: 4;
+        padding: 0;
+    }
 }
