--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -46,8 +46,8 @@ a{
     width: 45px;
     height: auto;
     cursor: pointer;
-    display: block; /* Añadido */
-    margin: 0 auto; /* Añadido */
+    display: block; 
+    margin: auto; 
   }
 
 
@@ -56,4 +56,9 @@ a{
     border-radius: 10px;
     width: 100px;
     height: 35px;
+}
+
+
+@media screen and (max-width: 768px){
+  
 }
