--- a/src/pages/como-funciona/como-funciona.css
+++ b/src/pages/como-funciona/como-funciona.css
@@ -37,7 +37,12 @@
     justify-items: center;
 
 }
-
+.texto_calificaciones{
+    max-width: 800px;
+    text-align:justify;
+    padding: 0;
+    margin: 0; 
+}
 .imagen-insignias{
     max-width: 400px;
 }
@@ -77,4 +82,66 @@
     max-width: 500px;
 }
 
+@media screen and (max-width: 425px){
 
+    .container_como_funciona{
+        padding: 100px 0 40px 58px;
+    }
+    .imagen-pasos{
+        width: 100%;
+    }
+    .calificaciones{
+        padding: 40px 0 40px 58px;
+    }
+    .texto_calificaciones{
+        width: 300px;
+        hyphens: auto;
+    }
+    .reseñas{
+        grid-template-columns: 1fr;
+        padding: 25px;
+        
+    }
+    .imagen-insignias{
+        width: 60%;
+        padding-top: 20px;
+        grid-row: 2;
+    }
+    .regala-insignia{
+        grid-row: 1;
+    }
+    .lista, .lista-insignias{
+        padding-bottom: 5px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .container_como_funciona{
+        padding: 100px 5px 40px 70px;
+    }
+    .imagen-pasos{
+        width: 100%;
+    }
+    .calificaciones{
+        padding: 40px 5px 40px 70px;
+    }
+    .texto_calificaciones{
+        width: 650px;
+    }
+    .reseñas{
+        padding: 40px 15px 40px 15px;
+        grid-template-columns: 0.5fr 1.5fr;
+        align-items: end;
+    }
+    .imagen-insignias{
+        padding-right: 5px;
+        width: 250px;
+    }
+    .lista{
+        font-size: 1.3rem;
+    }
+    .lista-insignias{
+        font-size: 1rem;
+    }
+}
