--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -25,7 +25,7 @@
     align-self: center;
 }
 
-.subtitulo {
+.subtitulo-footer {
     font-family: 'Gabarito', sans-serif;
     font-size: 1.5rem;
     margin: 0;
