--- a/src/pages/quienes-somos/empresa.css
+++ b/src/pages/quienes-somos/empresa.css
@@ -66,17 +66,19 @@ p{
     justify-content: center;
     text-align: center;
     width: 100%;
-    background-color: rgb(243, 187, 148);
+    background-color: rgb(181, 218, 237);
 }
 .valores-img{
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: stretch;
+    padding: 20px 0;
+    gap: 20px;
 }
 
 .valores1, .valores2{
-    width: 330px;
+    width: 70%;
 }
 
 .mision{
@@ -110,6 +112,7 @@ p{
         grid-template-columns: repeat(2, 1fr);
         gap: 0;
         padding-left: 65px;
+        padding-right: 10px;
         margin: 0;
     }
     .img{
@@ -130,7 +133,7 @@ p{
     }
 
     .valores{
-        padding: 40px 0;
+        padding: 40px 0 40px 30px;
         text-align: center;
         align-items: center;
     }
@@ -140,7 +143,7 @@ p{
     }
 
     .valores1{
-        padding: 20px;
+        padding-top: 20px;
 
     }
 }
