--- a/src/pages/precios/precios.css
+++ b/src/pages/precios/precios.css
@@ -1,7 +1,8 @@
-
+.precios{
+    background-color: rgba(232, 125, 145, 0.59);
+}
 
 .container_precios{
-    background-color: rgba(232, 125, 145, 0.59);
     padding: 100px 0 60px 80px;
     display: flex;
     flex-direction: column;
@@ -28,5 +29,9 @@
 }
 
 @media screen and (max-width: 667px){
-
+    .container_precios{
+        width: 100%;
+        max-width: 550px;
+        align-items: center;
+    }
 }
