--- a/src/pages/precios/precios.css
+++ b/src/pages/precios/precios.css
@@ -3,7 +3,7 @@
 }
 
 .container_precios{
-    padding: 100px 0 60px 80px;
+    padding: 140px 0 60px 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +14,7 @@
     font-family: 'gabarito',sans-serif;
     font-size: 2rem;
     text-align: center;
-    margin: 0;
+    margin: 20px;
 }
 .texto-precios{
     margin:0; 
