--- a/src/pages/precios/precios.css
+++ b/src/pages/precios/precios.css
@@ -24,7 +24,12 @@
 @media screen and (max-width: 768px){
     .container_precios{
         padding: 100px 20px 60px 75px;
-        max-width: 650px;
+        max-width: 420px;
+    }
+    .texto-precios{
+        margin:0; 
+        max-width:680px;
+        padding-top: 20px;
     }
 }
 
@@ -33,5 +38,10 @@
         width: 100%;
         max-width: 400px;
         align-items: center;
+    }
+    .texto-precios{
+        margin:0; 
+        max-width:400px;
+        padding-top: 20px;
     }
 }
