--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -64,7 +64,7 @@ a{
 @media screen and (max-width: 667px){
   .menu-toolbar {
     margin: 0;
-    gap:40%;
+    gap:120px;
     height: 50px;
   }
 }
